tests/neg-macros/i21916/Test_2.scala
@main def Test: Unit = Macro.test() // error
